@@ -16,6 +16,7 @@ Version 5.0.4
   Bug #25907 DataType Column of DataTypes collection does'nt contain the correct CLR Datatype   
   Bug #25950 DataSourceInformation collection contains incorrect values 
   Bug #26430 Will not install under Vista   
+  Bug #25605 BINARY and VARBINARY is returned as a string 
 
   Other changes
   -------------
